Maven Plugin Library Updates and Static code analyzer integration. (#4)